2022-03-12 Gabriele Gorla <gorlik@yahoo.com>

	* src/mod6502/gen.c:
	  Small genCast() improvements.

2022-03-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Eliminate nop jps.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/main.c:
	  Limit _BitInt size to 16 for pdk (temporarily, until an issue is fixed).
	* src/pdk/main.c:
	  Fix handling of parameters of odd size > 2.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/mcs51/gen.c:
	  Basic _BitInt support for mcs51.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/widebitintbitfield.c:
	  Fix cast from signed integer type to wider unsigned bit-precise type.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/SDCCval.c,
	  src/z80/gen.c:
	  support/regression/tests/widebitintbitfield.c:
	  Fixes for bit-precise bit-fields.

2022-03-11 Daniel Drotos <drdani@mazsola.iit.uni-miskolc.hu>

	* src/pdk/gen.c:
	  Fix compile by gcc 9.4.0: label must be on statement
	  
2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCglue.c,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/bitintbitfield.c:
	  Fix issues in casts between bitprecise types of different sign.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c:
	  Explicitly state _BitInt non-support.

2022-03-10 Gabriele Gorla <gorlik@yahoo.com>

	* src/SDCCglue.c: